--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "tailwindcss": "^3.3.3"
     },
     "dependencies": {
+        "@material-tailwind/html": "^2.2.2",
         "motion": "^10.16.2",
         "sass": "^1.66.1"
     }
